# rust-text-editor

./: Cargo.toml  README.md  test.txt
src/: editor.rs  gap_buffer.rs  logger.rs  main.rs  test.rs
